JSAI/error/src/test/resources/base/v011.js
function id(x) {
	return x;
}

var x = id(1);
print(x);